# assets_tracker

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
assets/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
payment/: models.py  serializers.py  urls.py  utils.py  views.py
payment/migrations/: 0001_initial.py
